--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "puppeteer-example",
+  "name": "onliner-basic-scraper-example",
   "version": "1.0.0",
   "description": "Playing with Puppeteer",
   "main": "index.js",
@@ -10,9 +10,11 @@
   "author": "CodeDraken",
   "license": "MIT",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
     "puppeteer": "^1.8.0"
   },
   "devDependencies": {
+    "@types/puppeteer": "^1.12.2",
     "standard": "^12.0.1"
   }
 }
