--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
+    "node-telegram-bot-api": "^0.30.0",
     "puppeteer": "^1.8.0"
   },
   "devDependencies": {
