--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "Playing with Puppeteer",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "CodeDraken",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.15.0",
     "cheerio": "^1.0.0-rc.2",
     "dedent": "^0.7.0",
+    "express": "^4.16.4",
     "node-telegram-bot-api": "^0.30.0",
     "puppeteer": "^1.8.0"
   },
